snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.pom.sha512
da64ad9958b4d9ff26e4d5c6cd3e94c664bbf732ab2da065c5b67291cf9a8540a3636f7b2b8617b277af2c37933d2c3d9741cad6a271915b526e3fff001116f9